# arexx-tap

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  config.toml
resources/: PROTOCOL.md  Protocol.txt  arexx-tap.service
src/: arexx.rs  config.rs  main.rs  sink.rs  usb.rs
src/sink/: data_file.rs  influxdb.rs  mqtt.rs
